--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/db_api/
-file_exists_behavior: overwrite
+file_exists_behavior: OVERWRITE
 
 hooks:
   AfterInstall:
