--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 aniso8601==9.0.1
 boto3==1.17.96
 botocore==1.20.96
+certifi==2021.5.30
+charset-normalizer==2.0.3
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
 Flask-RESTful==0.3.9
+idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jmespath==0.10.0
 MarkupSafe==2.0.1
 python-dateutil==2.8.1
 pytz==2021.1
+requests==2.26.0
 s3transfer==0.4.2
 six==1.16.0
 urllib3==1.26.5
