--- a/appspec.yml
+++ b/appspec.yml
@@ -8,6 +8,6 @@ file_exists_behavior: OVERWRITE
 
 hooks:
   AfterInstall:
-   - location: script/after-install.sh
+   - location: scripts/after-install.sh
      timeout: 300
      runas: root
